# eval

./: .gitignore  CLAUDE.md  README.md  pyproject.toml
.github/workflows/: ci.yml
data/: snapshot.py  transform.py
data/huggingface/: README.md  push.py
evals/naming/: report.py  run.py  task.py
harnesses/: in_context.py
promptfoo/: README.md  promptfooconfig.yaml
promptfoo/prompts/: v1.txt  v2.txt  v3.txt  v4.txt  v5.txt
results/naming/: RESULTS.md
scoring/: aggregate.py  client.py  frame_consistency.py  score.py  structural_fidelity.py
tests/: test_aggregate.py  test_data.py  test_harnesses.py  test_huggingface.py  test_score_orchestrator.py  test_scoring.py  test_snapshot_fetch.py
tests/evals/: test_naming.py
tests/fixtures/: snapshot_sample.json
