[project]
name = "m4x-eval"
version = "0.1.0"
requires-python = ">=3.12"
dependencies = [
    "openai>=1.60",
    "python-frontmatter>=1.1.0",
    "rich>=13.9",
    "datasets>=3.0",
]

[project.optional-dependencies]
dev = ["pytest>=8.0", "ruff>=0.8"]

[tool.ruff]
target-version = "py312"
line-length = 120

[tool.pytest.ini_options]
testpaths = ["tests"]
